Fix white background on IE

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -302,7 +302,7 @@ body {
 }
 .chess-piece {
   font-size: 40px;
-  background-color: inherit;
+  background-color: rgba(1, 1, 1, 0);
   border: 0 solid white;
   padding: 0;
   text-shadow: 0 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
