--- a/static/less/main.less
+++ b/static/less/main.less
@@ -126,7 +126,7 @@ body {
 
 .chess-piece {
     font-size: 40px;
-    background-color: inherit;
+    background-color: rgba(1, 1, 1, 0);
 
     border: 0 solid white;
     padding: 0;
